# VegasPokerGuide

./: DESIGN_DIRECTION.md  README.md  parse_warnings.json  tournaments.json
.github/workflows/: update-feed.yml
docs/superpowers/plans/: 2026-05-19-ios.md  2026-05-19-pipeline.md
docs/superpowers/specs/: 2026-05-19-vegas-poker-guide-design.md
ios/: .gitignore  Makefile  project.yml
ios/Sources/App/: AppState.swift  Config.swift  VegasPokerGuideApp.swift
ios/Sources/DesignSystem/: GameCategoryStyle.swift  Theme.swift  VenueColor.swift
ios/Sources/Logic/: ConflictDetector.swift  CountdownState.swift  FilterPredicate.swift  ReEntryFormatter.swift
ios/Sources/Models/: FeedDocuments.swift  GameCategory.swift  ReEntry.swift  Tournament.swift  Venue.swift
ios/Sources/Resources/: Info.plist  tournaments_seed.json  venues_seed.json
ios/Tests/: ConflictDetectorTests.swift  CountdownStateTests.swift  FavoritesStoreTests.swift  FeedDecodingTests.swift  FilterPredicateTests.swift  ReEntryFormatterTests.swift
ios/VegasPokerGuide.xcodeproj/: project.pbxproj
pipeline/: .gitignore  .last_data_hash  .last_sheet_hash  README.md  pyproject.toml  venues.yml
pipeline/src/vpf/: downloader.py  game_category.py  ids.py  main.py  re_entry.py  time_utils.py  tournaments.py  venues.py  wov.py  writers.py
pipeline/tests/: conftest.py  test_downloader.py  test_fixture.py  test_game_category.py  test_ids.py  test_main.py  test_re_entry.py  test_time_utils.py  test_tournaments.py  test_venues.py  test_wov.py  test_writers.py
pipeline/tests/fixtures/: sheet_2026-05-19.xlsx
(+50 files in other folders)
