[project]
name = "vpf"
version = "0.1.0"
description = "Vegas Poker Feed — parses SpaceyFCB sheet into JSON"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
